--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,20 @@ targetCompatibility = 11
 repositories {
     mavenCentral()
 }
+repositories {
+    jcenter()
+}
 
 test{
     useJUnitPlatform()
 }
 
 dependencies {
+    compile('com.baqend:bloom-filter:2.0.0')
     compileOnly 'org.projectlombok:lombok:1.18.12'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    implementation("com.google.guava:guava:29.0-jre")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
